# RAIDO

./: README.md  clientapp.Dockerfile  cuda_test.py  index.html  pyproject.toml  requirements.txt  serverapp.Dockerfile  status  test.yml
cached_cifar_10/uoft-cs___cifar10/plain_text/0.0.0/0b2714987fa478483af9968de7c934580d0bb9a2/: cache-010cc1e909c016f1.arrow  cache-0e552cc0eda60218.arrow  cache-133f7985a09945f2.arrow  cache-2d25654d2a424f64.arrow  cache-3121b91f6133e97f.arrow  cache-325fe8e19744c0c8.arrow  cache-37ad759ca97318f7.arrow  cache-464caa310d1f42e4.arrow  cache-498d76e808cd1f5f.arrow  cache-5281df1cb30497bb.arrow  cache-53c9c320f4382d73.arrow  cache-54dce29b882db936.arrow  cache-637dbcf37ac32d5c.arrow  cache-65920be3d556042c.arrow  cache-763f9c45c35c0b4d.arrow  cache-7da095d7a38e771c.arrow  cache-860842c86a0d2483.arrow  cache-99242c81243ab4c9.arrow  cache-d0b7376c4c110b9d.arrow  cache-e2653cfdbf2afc1e.arrow  cache-f579180fed8b7d79.arrow  cache-fd8f0cb06c0a59cb.arrow  dataset_info.json
client_1/data/: SH_Load_vars_labeled.xlsx
client_2/: client.py
complete/: .gitignore  compose.yml  compose_50.yml  compose_v2.yml  compose_v3.yml  docker-compose-10.yml  docker-compose-50.yml  generate_yml.py
distributed/: .gitignore  certs.yml
distributed/client/: compose.yml
distributed/server/: compose.yml
docker/base/: README.md
docker/base/alpine/: Dockerfile
docker/base/ubuntu/: Dockerfile
docker/base/ubuntu-cuda/: Dockerfile
docker/clientapp/: Dockerfile  README.md
docker/complete/: certs.yml  compose.yml  with-state.yml  with-tls.yml
docker/distributed/: certs.yml
docker/distributed/client/: compose.yml
docker/distributed/server/: compose.yml
docker/serverapp/: Dockerfile  README.md
docker/superlink/: Dockerfile  README.md
docker/supernode/: Dockerfile  README.md
flowerapp/: FedAvgPlus.py  ImageClassification.py  __init__.py  base_task.py  client_app.py  continual.py  custom_strategy.py  models.py  my_strategy.py  serialize_task.py  server_app.py  task.py  utils.py
flowerapp/client/: FedCLClient.py  MyClientApp.py  ScaffoldClient.py
flowerapp/strategies/: FedAvgPlus.py  FedCL.py  Scaffold.py  custom_strategy.py
flowerapp/tasks/: ContinualLearning.py  Forecasting.py  ImageClassification.py  Task.py  TimeSeriesClassification.py
master_service/: master_app.py  master_service.Dockerfile  requirements.txt
output/: global_model.pth  global_model_round1  global_model_round1.pt  global_model_round2  global_model_round2.pt  results.json  results_10113301450292842719.json  results_10391076764090589746.json  results_10622897391874068243.json  results_10694900785063071191.json  results_10740716665830683238.json  results_10959760108357589253.json  results_109848840005159598.json  results_11042252462515384506.json  results_11148944272192681140.json  results_11191773694731690454.json  results_11271251911962212898.json  results_11408314078317810419.json  results_11501022107889837737.json  results_11530638765296331118.json  results_11542925139370643256.json  results_11916807914710152059.json  results_12411198304771637308.json  results_12415106449185128445.json  results_12794269943842013004.json  results_12825022021211260968.json  results_13351426048023058094.json  results_13454607310560354382.json  results_13813501667098321457.json  results_1384874918321375815.json  results_13867340515329411624.json  results_13868395040401784303.json  results_13976946376622216246.json  results_14060643171055692810.json  results_14212599473463667172.json  results_14310691847883948004.json  results_1433369275707572992.json  results_14343369913256077131.json  results_14942814288159819708.json  results_14959322151377021451.json  (+75 more)
subprocess/: compose_v3.yml
test_code/: create_CNN.py
