[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower-app"
version = "1.2.0"
description = "Federated Learning project for RAIDO"
license = "Apache-2.0"
dependencies = [
    
    "flwr[simulation]>=1.17.0",
    "flwr-datasets>=0.5.0",
    "torch==2.5.1",
    "scikit-learn==1.6.1",
    "torchvision==0.20.1",
    "pandas",
    "numpy",
    "openpyxl",
    "omegaconf"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "flowerapp.server_app:app"
clientapp = "flowerapp.client_app:app"

[tool.flwr.app.config]
data_url = ""
num-server-rounds = 100
model.name = "SimpleCNN"
model.options.input_dim = 400       # cifar
# model.options.hidden_dims.x = 10    # [10,20]
# model.options.hidden_dims.y = 20
model.options.output_dim = 10
model.pretrained = "false"
model.path = "output/global_model.pth"
task.name = "ImageClassification"
# Hyperparameters
train.epochs = 5
train.lr = 0.036
train.batch_size = 128
# Strategy Options
strategy.name = "FedAvgPlus"
strategy.options.fraction_fit = 1.0
strategy.options.fraction_evaluate = 1.0
strategy.options.min_fit_clients = 2
strategy.options.min_evaluate_clients = 2
strategy.options.min_available_clients = 2
strategy.options.accept_failures = true
# strategy.options.inplace = true
strategy.FedAvgPlus.options.lr_new = 0.005
strategy.FedAvgPlus.options.epochs_new = 1
strategy.FedAvgPlus.options.decay_round = 1
strategy.FedProx.options.proximal_mu = 0.5
strategy.Bulyan.options.num_malicious_clients = 1
strategy.FedAvgM.options.server_learning_rate = 0.01
strategy.FedAvgM.options.server_momentum = 0.7
strategy.FaultTolerantFedAvg.options.min_completion_rate_fit = 0.5  
strategy.FaultTolerantFedAvg.options.min_completion_rate_evaluate = 0.5  
strategy.FedAdagrad.options.eta = 0.05
strategy.FedAdagrad.options.eta_l = 0.05
strategy.FedAdagrad.options.tau = 1e-8
strategy.FedOpt.options.eta = 0.05
strategy.FedOpt.options.eta_l = 0.05
strategy.FedOpt.options.tau = 1e-8
strategy.FedOpt.options.beta_1 = 0.9
strategy.FedOpt.options.beta_2 = 0.99
strategy.FedYogi.options.eta = 0.01
strategy.FedYogi.options.eta_l = 0.0316
strategy.FedYogi.options.tau = 0.01
strategy.FedYogi.options.beta_1 = 0.9
strategy.FedYogi.options.beta_2 = 0.99
strategy.QFedAvg.options.q_param = 0.2
strategy.QFedAvg.options.qffl_learning_rate = 0.1
strategy.FedTrimmedAvg.options.beta = 0.2
strategy.FedXgbCyclic.options.num_evaluation_clients = ""
strategy.FedXgbCyclic.options.num_fit_clients = ""
# Parameters for the Differential Privacy
dp.flag = "false"
dp.side = "server"
dp.type = "adaptive"
dp.fixed.noise_multiplier = 0.1
dp.fixed.clipping_norm = 0.5
dp.fixed.num_sampled_clients = 2
dp.adaptive.noise_multiplier = 0.1
dp.adaptive.num_sampled_clients =2
dp.adaptive.initial_clipping_norm= 0.1
dp.adaptive.target_clipped_quantile = 0.5
dp.adaptive.clip_norm_lr = 0.2
dp.adaptive.clipped_count_stddev = ""   # optional

num-sampled-clients = 2
# Parameters for the SecAgg+ protocol
secagg.flag = "false"
num-shares = 10
secagg.reconstruction-threshold = 2


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2

[tool.flwr.federations.local-deployment]
address = "superlink:9093"
insecure = true

[tool.flwr.federations.local-deployment-docker]
address = "superlink:9093"
insecure = true

[tool.flwr.federations.remote-deployment]
address = "160.40.48.201:9093"
root-certificates = "./distributed/superlink-certificates/ca.crt"